--- a/src/organization/pom.xml
+++ b/src/organization/pom.xml
@@ -87,6 +87,13 @@
 			<artifactId>mapstruct-processor</artifactId>
 			<version>1.6.3</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
+			<version>4.3.0</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
