--- a/src/training/src/main/resources/application.yaml
+++ b/src/training/src/main/resources/application.yaml
@@ -15,7 +15,7 @@ spring:
             mode: none
 
   datasource:
-    url: jdbc:postgresql://localhost:5432/as_training_program
+    url: jdbc:postgresql://localhost:5432/as_training
     username: postgres
     password: 123456
 
@@ -23,3 +23,4 @@ server:
   port: 8087
 
 userProfileClientUrl: http://localhost:8081
+organizationClientUrl: http://localhost:8086
