--- a/src/auth/src/main/resources/application.yaml
+++ b/src/auth/src/main/resources/application.yaml
@@ -14,6 +14,12 @@ spring:
           validations:
             mode: none
 
+  kafka:
+    bootstrap-servers: localhost:9092
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+
   datasource:
     url: jdbc:postgresql://localhost:5432/as_auth
     username: postgres
