--- a/src/mail/src/main/resources/application.yaml
+++ b/src/mail/src/main/resources/application.yaml
@@ -14,5 +14,27 @@ spring:
           validations:
             mode: none
 
+  kafka:
+    bootstrap-servers: localhost:9092
+    consumer:
+      group-id: mail
+      auto-offset-reset: earliest
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      properties:
+        spring.json.trusted.packages: "*"
+
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: sametozalp01@gmail.com
+    password: ${MAIL_PASSWORD}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+
 server:
   port: 8082
