--- a/src/training/src/main/resources/application.yaml
+++ b/src/training/src/main/resources/application.yaml
@@ -19,6 +19,12 @@ spring:
     username: postgres
     password: 123456
 
+  kafka:
+    bootstrap-servers: localhost:9092
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+
 server:
   port: 8087
 
