--- a/src/organization/pom.xml
+++ b/src/organization/pom.xml
@@ -94,6 +94,11 @@
 			<version>4.3.0</version>
 			<scope>compile</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
