--- a/src/healthy-eating-tip/pom.xml
+++ b/src/healthy-eating-tip/pom.xml
@@ -87,7 +87,13 @@
 			<artifactId>mapstruct-processor</artifactId>
 			<version>1.6.3</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.ozalp</groupId>
+            <artifactId>core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
