--- a/src/membership/pom.xml
+++ b/src/membership/pom.xml
@@ -99,6 +99,12 @@
 			<version>4.3.0</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.ozalp</groupId>
+			<artifactId>core</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
