--- a/src/training/src/main/resources/application.yaml
+++ b/src/training/src/main/resources/application.yaml
@@ -30,3 +30,8 @@ server:
 
 userProfileClientUrl: http://localhost:8081
 organizationClientUrl: http://localhost:8086
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
