--- a/src/membership/src/main/resources/application.yaml
+++ b/src/membership/src/main/resources/application.yaml
@@ -31,3 +31,7 @@ server:
 userProfileClientUrl: http://localhost:8081
 organizationClientUrl: http://localhost:8086
 
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
