--- a/src/motivation-sentence/pom.xml
+++ b/src/motivation-sentence/pom.xml
@@ -93,6 +93,12 @@
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+			<version>4.3.1</version>
+			<scope>compile</scope>
+		</dependency>
     </dependencies>
 
 	<build>
