--- a/src/organization/pom.xml
+++ b/src/organization/pom.xml
@@ -105,6 +105,12 @@
 			<version>1.0-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+			<version>4.3.1</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
