--- a/src/organization/src/main/resources/application.yaml
+++ b/src/organization/src/main/resources/application.yaml
@@ -29,3 +29,8 @@ server:
   port: 8086
 
 userProfileClientUrl: http://localhost:8081
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
