--- a/src/healthy-eating-tip/pom.xml
+++ b/src/healthy-eating-tip/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.ozalp</groupId>
 	<artifactId>healthy-eating-tip</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0</version>
 	<name>healthy-eating-tip</name>
 	<description>Athletic Sports</description>
 	<url/>
