--- a/src/membership/pom.xml
+++ b/src/membership/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.ozalp</groupId>
 	<artifactId>membership</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0</version>
 	<name>membership</name>
 	<description>Athletic Sports</description>
 	<url/>
